# cvetrends

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cvetrends/: __main__.py
cvetrends/lib/: message_payload.json  notify.py
tests/: conftest.py
